force-app/main/default/objects/due__Communication__c/due__Communication__c.object-meta.xml
<CustomObject>
    <label>Communication</label>
    <nameField>
        <label>Content</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>