force-app/main/default/objects/due__Communication__c/fields/due__Email__c.field-meta.xml
<CustomField>
    <fullName>due__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>