force-app/main/default/objects/due__Communication__c/fields/due__From__c.field-meta.xml
<CustomField>
    <fullName>due__From__c</fullName>
    <label>From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>