force-app/main/default/objects/due__Communication__c/fields/due__FullContent__c.field-meta.xml
<CustomField>
    <fullName>due__FullContent__c</fullName>
    <label>FullContent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>