force-app/main/default/objects/due__Communication__c/fields/due__Type__c.field-meta.xml
<CustomField>
    <fullName>due__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Message</fullName>
            </value>
            <value>
                <fullName>Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>